src/antlr/PluscalParser.ts
// Generated from Pluscal.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import PluscalListener from "./PluscalListener.js";
import PluscalVisitor from "./PluscalVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PluscalParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly VARIABLE = 48;
	public static readonly FIELD = 49;
	public static readonly NAME = 50;
	public static readonly LABEL = 51;
	public static readonly EXPR = 52;
	public static readonly DEFS = 53;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_algorithm = 0;
	public static readonly RULE_definitions = 1;
	public static readonly RULE_macro = 2;
	public static readonly RULE_procedure = 3;
	public static readonly RULE_process = 4;
	public static readonly RULE_vardecls = 5;
	public static readonly RULE_vardecl = 6;
	public static readonly RULE_pvardecls = 7;
	public static readonly RULE_pvardecl = 8;
	public static readonly RULE_algorithmbody = 9;
	public static readonly RULE_stmt = 10;
	public static readonly RULE_unlabeledstmt = 11;
	public static readonly RULE_assign = 12;
	public static readonly RULE_lhs = 13;
	public static readonly RULE_if = 14;
	public static readonly RULE_while = 15;
	public static readonly RULE_either = 16;
	public static readonly RULE_with = 17;
	public static readonly RULE_await = 18;
	public static readonly RULE_print = 19;
	public static readonly RULE_assert = 20;
	public static readonly RULE_skip = 21;
	public static readonly RULE_return = 22;
	public static readonly RULE_goto = 23;
	public static readonly RULE_call = 24;
	public static readonly RULE_macrocall = 25;
	public static readonly literalNames: (string | null)[] = [ null, "'--algorithm'", 
                                                            "'--fair algorithm'", 
                                                            "'end algorithm'", 
                                                            "'define'", 
                                                            "'end define'", 
                                                            "';'", "'Macro'", 
                                                            "','", "'end Macro'", 
                                                            "'procedure'", 
                                                            "'end procedure'", 
                                                            "'fair'", "'+'", 
                                                            "'process'", 
                                                            "'='", "'\\in'", 
                                                            "'end process'", 
                                                            "'varialbe'", 
                                                            "'variables'", 
                                                            "'variable'", 
                                                            "'begin'", "':'", 
                                                            "'-'", "':='", 
                                                            "'||'", "'['", 
                                                            "']'", "'.'", 
                                                            "'if'", "'then'", 
                                                            "'elsif'", "'else'", 
                                                            "'end if'", 
                                                            "'while'", "'do'", 
                                                            "'end while'", 
                                                            "'eithr'", "'with'", 
                                                            "'end with ;'", 
                                                            "'await'", "'when'", 
                                                            "'print'", "'assert'", 
                                                            "'skip'", "'return'", 
                                                            "'goto'", "'call'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "VARIABLE", 
                                                             "FIELD", "NAME", 
                                                             "LABEL", "EXPR", 
                                                             "DEFS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"algorithm", "definitions", "macro", "procedure", "process", "vardecls", 
		"vardecl", "pvardecls", "pvardecl", "algorithmbody", "stmt", "unlabeledstmt", 
		"assign", "lhs", "if", "while", "either", "with", "await", "print", "assert", 
		"skip", "return", "goto", "call", "macrocall",
	];
	public get grammarFileName(): string { return "Pluscal.g4"; }
	public get literalNames(): (string | null)[] { return PluscalParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PluscalParser.symbolicNames; }
	public get ruleNames(): string[] { return PluscalParser.ruleNames; }
	public get serializedATN(): number[] { return PluscalParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PluscalParser._ATN, PluscalParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public algorithm(): AlgorithmContext {
		let localctx: AlgorithmContext = new AlgorithmContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PluscalParser.RULE_algorithm);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			_la = this._input.LA(1);
			if(!(_la===1 || _la===2)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 53;
			this.match(PluscalParser.NAME);
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18 || _la===19) {
				{
				this.state = 54;
				this.vardecls();
				}
			}

			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 57;
				this.definitions();
				}
			}

			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===7) {
				{
				{
				this.state = 60;
				this.macro();
				}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 66;
				this.procedure();
				}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 78;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 21:
				{
				this.state = 72;
				this.algorithmbody();
				}
				break;
			case 12:
			case 14:
				{
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 73;
					this.process();
					}
					}
					this.state = 76;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===12 || _la===14);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 80;
			this.match(PluscalParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public definitions(): DefinitionsContext {
		let localctx: DefinitionsContext = new DefinitionsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, PluscalParser.RULE_definitions);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this.match(PluscalParser.T__3);
			this.state = 83;
			this.match(PluscalParser.DEFS);
			this.state = 84;
			this.match(PluscalParser.T__4);
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 85;
				this.match(PluscalParser.T__5);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public macro(): MacroContext {
		let localctx: MacroContext = new MacroContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PluscalParser.RULE_macro);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(PluscalParser.T__6);
			this.state = 89;
			this.match(PluscalParser.NAME);
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===48) {
				{
				this.state = 90;
				this.match(PluscalParser.VARIABLE);
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===8) {
					{
					{
					this.state = 91;
					this.match(PluscalParser.T__7);
					this.state = 92;
					this.match(PluscalParser.VARIABLE);
					}
					}
					this.state = 97;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 100;
			this.algorithmbody();
			this.state = 101;
			this.match(PluscalParser.T__8);
			this.state = 103;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 102;
				this.match(PluscalParser.T__5);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public procedure(): ProcedureContext {
		let localctx: ProcedureContext = new ProcedureContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PluscalParser.RULE_procedure);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 105;
			this.match(PluscalParser.T__9);
			this.state = 106;
			this.match(PluscalParser.NAME);
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===48) {
				{
				this.state = 107;
				this.pvardecl();
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===8) {
					{
					{
					this.state = 108;
					this.match(PluscalParser.T__7);
					this.state = 109;
					this.pvardecl();
					}
					}
					this.state = 114;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19 || _la===20) {
				{
				this.state = 117;
				this.pvardecls();
				}
			}

			this.state = 120;
			this.match(PluscalParser.T__10);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 121;
				this.match(PluscalParser.T__5);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public process(): ProcessContext {
		let localctx: ProcessContext = new ProcessContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PluscalParser.RULE_process);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===12) {
				{
				this.state = 124;
				this.match(PluscalParser.T__11);
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===13) {
					{
					this.state = 125;
					this.match(PluscalParser.T__12);
					}
				}

				}
			}

			this.state = 130;
			this.match(PluscalParser.T__13);
			this.state = 131;
			this.match(PluscalParser.NAME);
			this.state = 132;
			_la = this._input.LA(1);
			if(!(_la===15 || _la===16)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 133;
			this.match(PluscalParser.EXPR);
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18 || _la===19) {
				{
				this.state = 134;
				this.vardecls();
				}
			}

			this.state = 137;
			this.algorithmbody();
			this.state = 138;
			this.match(PluscalParser.T__16);
			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 139;
				this.match(PluscalParser.T__5);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public vardecls(): VardeclsContext {
		let localctx: VardeclsContext = new VardeclsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PluscalParser.RULE_vardecls);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			_la = this._input.LA(1);
			if(!(_la===18 || _la===19)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 143;
				this.vardecl();
				}
				}
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===48);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public vardecl(): VardeclContext {
		let localctx: VardeclContext = new VardeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PluscalParser.RULE_vardecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			this.match(PluscalParser.VARIABLE);
			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15 || _la===16) {
				{
				this.state = 149;
				_la = this._input.LA(1);
				if(!(_la===15 || _la===16)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 150;
				this.match(PluscalParser.EXPR);
				}
			}

			this.state = 153;
			_la = this._input.LA(1);
			if(!(_la===6 || _la===8)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pvardecls(): PvardeclsContext {
		let localctx: PvardeclsContext = new PvardeclsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PluscalParser.RULE_pvardecls);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			_la = this._input.LA(1);
			if(!(_la===19 || _la===20)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 158;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 158;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 48:
					{
					this.state = 156;
					this.pvardecl();
					}
					break;
				case 6:
				case 8:
					{
					this.state = 157;
					_la = this._input.LA(1);
					if(!(_la===6 || _la===8)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 160;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===6 || _la===8 || _la===48);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pvardecl(): PvardeclContext {
		let localctx: PvardeclContext = new PvardeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PluscalParser.RULE_pvardecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this.match(PluscalParser.VARIABLE);
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15) {
				{
				this.state = 163;
				this.match(PluscalParser.T__14);
				this.state = 164;
				this.match(PluscalParser.EXPR);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public algorithmbody(): AlgorithmbodyContext {
		let localctx: AlgorithmbodyContext = new AlgorithmbodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, PluscalParser.RULE_algorithmbody);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 167;
			this.match(PluscalParser.T__20);
			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 168;
				this.stmt();
				}
				}
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 7338785) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let localctx: StmtContext = new StmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, PluscalParser.RULE_stmt);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===51) {
				{
				this.state = 173;
				this.match(PluscalParser.LABEL);
				this.state = 174;
				this.match(PluscalParser.T__21);
				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===13 || _la===23) {
					{
					this.state = 175;
					_la = this._input.LA(1);
					if(!(_la===13 || _la===23)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
				}

				}
			}

			this.state = 180;
			this.unlabeledstmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unlabeledstmt(): UnlabeledstmtContext {
		let localctx: UnlabeledstmtContext = new UnlabeledstmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, PluscalParser.RULE_unlabeledstmt);
		try {
			this.state = 195;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 48:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 182;
				this.assign();
				}
				break;
			case 29:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 183;
				this.if_();
				}
				break;
			case 34:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 184;
				this.while_();
				}
				break;
			case 37:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 185;
				this.either();
				}
				break;
			case 38:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 186;
				this.with_();
				}
				break;
			case 40:
			case 41:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 187;
				this.await();
				}
				break;
			case 42:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 188;
				this.print();
				}
				break;
			case 43:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 189;
				this.assert();
				}
				break;
			case 44:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 190;
				this.skip();
				}
				break;
			case 45:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 191;
				this.return_();
				}
				break;
			case 46:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 192;
				this.goto();
				}
				break;
			case 47:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 193;
				this.call();
				}
				break;
			case 50:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 194;
				this.macrocall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public assign(): AssignContext {
		let localctx: AssignContext = new AssignContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, PluscalParser.RULE_assign);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 197;
			this.lhs();
			this.state = 198;
			this.match(PluscalParser.T__23);
			this.state = 199;
			this.match(PluscalParser.EXPR);
			this.state = 207;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===25) {
				{
				{
				this.state = 200;
				this.match(PluscalParser.T__24);
				this.state = 201;
				this.lhs();
				this.state = 202;
				this.match(PluscalParser.T__23);
				this.state = 203;
				this.match(PluscalParser.EXPR);
				}
				}
				this.state = 209;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 210;
			this.match(PluscalParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lhs(): LhsContext {
		let localctx: LhsContext = new LhsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, PluscalParser.RULE_lhs);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 212;
			this.match(PluscalParser.VARIABLE);
			this.state = 227;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===26 || _la===28) {
				{
				this.state = 225;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 26:
					{
					this.state = 213;
					this.match(PluscalParser.T__25);
					this.state = 214;
					this.match(PluscalParser.EXPR);
					this.state = 219;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===8) {
						{
						{
						this.state = 215;
						this.match(PluscalParser.T__7);
						this.state = 216;
						this.match(PluscalParser.EXPR);
						}
						}
						this.state = 221;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 222;
					this.match(PluscalParser.T__26);
					}
					break;
				case 28:
					{
					this.state = 223;
					this.match(PluscalParser.T__27);
					this.state = 224;
					this.match(PluscalParser.FIELD);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 229;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public if_(): IfContext {
		let localctx: IfContext = new IfContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, PluscalParser.RULE_if);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 230;
			this.match(PluscalParser.T__28);
			this.state = 231;
			this.match(PluscalParser.EXPR);
			this.state = 232;
			this.match(PluscalParser.T__29);
			this.state = 234;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 233;
				this.stmt();
				}
				}
				this.state = 236;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 7338785) !== 0));
			this.state = 248;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===31) {
				{
				{
				this.state = 238;
				this.match(PluscalParser.T__30);
				this.state = 239;
				this.match(PluscalParser.EXPR);
				this.state = 240;
				this.match(PluscalParser.T__29);
				this.state = 242;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 241;
					this.stmt();
					}
					}
					this.state = 244;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 7338785) !== 0));
				}
				}
				this.state = 250;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 257;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===32) {
				{
				this.state = 251;
				this.match(PluscalParser.T__31);
				this.state = 253;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 252;
					this.stmt();
					}
					}
					this.state = 255;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 7338785) !== 0));
				}
			}
